--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<li><a href="https://www.linkedin.com/in/shubham-kumar-697a3a1a4/"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 									<br>
-									<a data-fancybox data-ratio="2" href="Edit_13.05.22 Resume.pdf"><button type="button" class="btn btn-outline-primary" >Download Resume</button></a>
+									<a data-fancybox data-ratio="2" href="2Resume - Copy.pdf"><button type="button" class="btn btn-outline-primary" >Download Resume</button></a>
 								</div>
 							</div>
 						</div>
